--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,13 +1,35 @@
 # Examples:
-# - title: "Adaptive Robust Control Contraction Metrics: Transient Bounds in Adaptive Control with Unmatched Uncertainties"
-#   # image: publications/joint.png
-#   description: "This work presents a new sufficient condition for synthesizing nonlinear controllers that yield bounded closed-loop tracking error transients despite the presence of unmatched uncertainties that are concurrently being learned online. The approach utilizes contraction theory and addresses fundamental limitations of existing approaches by allowing the contraction metric to depend on the unknown model parameters. This allows the controller to incorporate new model estimates generated online without sacrificing its strong convergence and bounded transients guarantees. The approach is specifically designed for trajectory tracking so the approach is more broadly applicable to adaptive model predictive control as well. Simulation results on a nonlinear system with unmatched uncertainties demonstrates the approach. "
-#   authors: S. Gessow, and B.T. Lopez
-#   link:
-#     # url: https://arxiv.org/abs/2303.03505
-#     display: arXiv
-#   highlight: 1
-#   # note: "[Paper](https://arxiv.org/abs/2303.03505) &nbsp; &nbsp;"
+- title: "Multi-Robot Task Assignment and Path Finding for Time-Sensitive Missions with Online Task Generation"
+  image: publications/tsotan.png
+  description: "Executing time-sensitive multi-robot missions involves two distinct problems: Multi-Robot Task Assignment (MRTA) and Multi-Agent Path Finding (MAPF). Computing safe paths that complete every task and minimize the time to mission completion, or makespan, is a significant computational challenge even for small teams. In many missions, tasks can be generated during execution which is typically handled by either recomputing task assignments and paths from scratch, or by modifying existing plans using approximate approaches. While performing task reassignment and path finding from scratch produces theoretically optimal results, the computational load makes it too expensive for online implementation. In this work, we present Time-Sensitive Online Task Assignment and Navigation (TSOTAN), a framework which can quickly incorporate online generated tasks while guaranteeing bounded suboptimal task assignment makespans. It does this by assessing the quality of partial task reassignments and only performing a complete reoptimization when the makespan exceeds a user specified suboptimality bound. Through experiments in 2D environments we demonstrate TSOTAN's ability to produce quality solutions with computation times suitable for online implementation. "
+  authors: D. Thorne, and B.T. Lopez
+  link:
+    url: https://arxiv.org/abs/2310.06153
+    display: arXiv
+  highlight: 0
+  note: "[Paper](https://arxiv.org/abs/2310.06153) &nbsp; &nbsp;"
+        #  [YouTube](https://youtu.be/E190005kZKg?si=XnBb73oVQE4X5tKR)"
+
+- title: "Adaptive Robust Control Contraction Metrics: Transient Bounds in Adaptive Control with Unmatched Uncertainties"
+  # image: publications/joint.png
+  description: "This work presents a new sufficient condition for synthesizing nonlinear controllers that yield bounded closed-loop tracking error transients despite the presence of unmatched uncertainties that are concurrently being learned online. The approach utilizes contraction theory and addresses fundamental limitations of existing approaches by allowing the contraction metric to depend on the unknown model parameters. This allows the controller to incorporate new model estimates generated online without sacrificing its strong convergence and bounded transients guarantees. The approach is specifically designed for trajectory tracking so the approach is more broadly applicable to adaptive model predictive control as well. Simulation results on a nonlinear system with unmatched uncertainties demonstrates the approach. "
+  authors: S. Gessow, and B.T. Lopez
+  link:
+    # url: https://arxiv.org/abs/2303.03505
+    display: arXiv
+  highlight: 0
+  # note: "[Paper](https://arxiv.org/abs/2303.03505) &nbsp; &nbsp;"
+
+- title: "Direct LiDAR-Inertial Odometry and Mapping: Perceptive and Connective SLAM"
+  image: publications/joint.png
+  description: "This paper presents Direct LiDAR-Inertial Odometry and Mapping (DLIOM), a robust SLAM algorithm with an explicit focus on computational efficiency, operational reliability, and real-world efficacy. DLIOM contains several key algorithmic innovations in both the front-end and back-end subsystems to design a resilient LiDAR-inertial architecture that is perceptive to the environment and produces accurate localization and high-fidelity 3D mapping for autonomous robotic platforms. Our ideas spawned after a deep investigation into modern LiDAR SLAM systems and their inabilities to generalize across different operating environments, in which we address several common algorithmic failure points by means of proactive safe-guards to provide long-term operational reliability in the unstructured real world. We detail several important innovations to localization accuracy and mapping resiliency distributed throughout a typical LiDAR SLAM pipeline to comprehensively increase algorithmic speed, accuracy, and robustness. In addition, we discuss insights gained from our ground-up approach while implementing such a complex system for real-time state estimation on resource-constrained systems, and we experimentally show the increased performance of our method as compared to the current state-of-the-art on both public benchmark and self-collected datasets. "
+  authors: K. Chen, R. Nemiroff, and B.T. Lopez
+  link:
+    url: https://arxiv.org/abs/2305.01843
+    display: arXiv
+  highlight: 0
+  note: "[Paper](https://arxiv.org/abs/2305.01843) &nbsp; &nbsp;"
+        #  [YouTube](https://youtu.be/E190005kZKg?si=XnBb73oVQE4X5tKR)"
 
 - title: "Joint On-Manifold Gravity and Accelerometer Intrinsics Estimation for Inertially Aligned Mapping"
   image: publications/joint.png
