--- a/_data/members.yml
+++ b/_data/members.yml
@@ -66,6 +66,15 @@
     <b>Research</b>: Trajectory Planning
     <a href="mailto:sarahena@g.ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="">Website</a>
 
+- name: Brandon Dee
+  type: grad
+  photo: people/dummy.jpg
+  info: |
+    MS Student, MAE
+    BS, UCLA 2022
+    <b>Research</b>: Drone Design
+    <a href="mailto:" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="">Website</a>
+
 ### Undergrads ###
 - name: Matthew Guemmer
   type: undergrad
