--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -7,15 +7,15 @@
     display: arXiv
     #IEEE International Conference on Robotics and Automation 
   note: "[Paper](https://arxiv.org/abs/2310.06153) &nbsp; &nbsp;"
-        #  [YouTube](https://youtu.be/E190005kZKg?si=XnBb73oVQE4X5tKR)"
+        #  [YouTube]()"
 
 - title: "Adaptive Robust Control Contraction Metrics: Transient Bounds in Adaptive Control with Unmatched Uncertainties"
   authors: S. Gessow, and B.T. Lopez
   year: 2023
   link:
-    url: 
+    url: https://arxiv.org/abs/2310.13655
     display: IEEE Conference on Decision and Control
-  note: "[Paper]() &nbsp; &nbsp;"
+  note: "[Paper](https://arxiv.org/abs/2310.13655) &nbsp; &nbsp;"
 
 - title: "Direct LiDAR-Inertial Odometry and Mapping: Perceptive and Connective SLAM"
   authors: K. Chen, R. Nemiroff, and B.T. Lopez
@@ -25,7 +25,7 @@
     display: arXiv
     #IEEE Transactions on Robotics
   note: "[Paper](https://arxiv.org/abs/2305.01843) &nbsp; &nbsp;"
-        #  [YouTube](https://youtu.be/E190005kZKg?si=XnBb73oVQE4X5tKR)"
+        #  [YouTube]()"
 
 - title: "Joint On-Manifold Gravity and Accelerometer Intrinsics Estimation for Inertially Aligned Mapping"
   authors: R. Nemiroff, K. Chen, and B.T. Lopez
