brandon research update

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -72,7 +72,7 @@
   info: |
     MS Student, MAE
     BS, UCLA 2022
-    <b>Research</b>: Motion Planning and Control of Bi-directional Thrust Quadrotor
+    <b>Research</b>: Motion Planning and Control of Micro Air Vehicles
     <a href="mailto:brandon.dee2000@gmail.com" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/brandon-dee-uclaengineering/">Website</a>
 
 ### Undergrads ###
