--- a/_data/members.yml
+++ b/_data/members.yml
@@ -16,7 +16,7 @@
     PhD Student, MAE
     MS, UCLA 2022
     BS, UC Santa Barbara 2020
-    <b>Research</b>: Motion Planning and Exploration
+    <b>Research</b>: Trajecotry Planning
     <a href="mailto:hjlevy@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://helenelevy.wixsite.com/portfolio">Website</a>
 
 - name: Samuel Gessow
@@ -34,7 +34,7 @@
   info: |
     PhD Student, MAE
     BS, UCLA 2021
-    <b>Research</b>: Heterogeneous Robot Teams
+    <b>Research</b>: Optimization and SLAM
     <a href="mailto:davidthorne@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/david-thorne2/">Website</a>
 
 - name: Yanlong Ma
@@ -44,27 +44,8 @@
     PhD Student, MAE
     MS, Stanford University 2020
     BS, UC Berkeley 2017
-    <b>Research</b>: Trajectory Planning
+    <b>Research</b>: Machine Learning and SLAM
     <a href="mailto:yanlong@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/yanlong-ma-622278b8/">Website</a>
-
-- name: Aaron John Sabu
-  type: grad
-  photo: people/ajohnsabu.jpg
-  info: |
-    PhD Student, MAE
-    MS, UCLA 2023
-    BTech, IIT Bombay 2021
-    <b>Research</b>: Multi-Agent Interaction in Outer Space
-    <a href="mailto:aaronjs@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://sites.google.com/view/aaronjs/">Website</a>
-
-- name: Sarah Enayati
-  type: grad
-  photo: people/senayati.jpg
-  info: |
-    PhD Student, MAE
-    BS, UCLA 2022
-    <b>Research</b>: Trajectory Planning
-    <a href="mailto:sarahena@g.ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="">Website</a>
 
 - name: Brandon Dee
   type: grad
@@ -72,7 +53,7 @@
   info: |
     MS Student, MAE
     BS, UCLA 2022
-    <b>Research</b>: Motion Planning and Control of Micro Air Vehicles
+    <b>Research</b>: Nonlinear Control and Trajectory Optimization
     <a href="mailto:brandon.dee2000@gmail.com" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/brandon-dee-uclaengineering/">Website</a>
 
 - name: Hieu Nguyen
@@ -81,32 +62,20 @@
   info: |
     MS Student, MAE
     BS, UCLA 2023
-    <b>Research</b>: Trajectory Planning
+    <b>Research</b>: Trajectory Optimization
     <a href="mailto:hieunguyen1602@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://linkedin.com/in/hieu-nguyen-tam/">Website</a>
+
+- name: James Tseng
+  type: grad
+  photo: people/jtseng.jpg
+  info: |
+    MS Student, MAE
+    BS, UCLA 2023
+    <b>Research</b>: Trajectory Optimization
+    <a href="mailto:jtseng22@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://jtfa22.github.io/">Website</a>
 
 
 ### Undergrads ###
-- name: Matthew Guemmer
-  type: undergrad
-  photo: people/mguemmer.jpg
-  info: |
-    BS Student, MAE
-    <a href="mailto:matthewguemmer@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/matthewguemmer/">Website</a>
-
-- name: Jacob Sayono
-  type: undergrad
-  photo: people/jsayono.jpg
-  info: |
-    BS Student, MAE
-    <a href="mailto:jacobsayono@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/jacobsayono/">Website</a>
-
-- name: James Tseng
-  type: undergrad
-  photo: people/jtseng.jpg
-  info: |
-    BS Student, MAE
-    <a href="mailto:jtseng22@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://jtfa22.github.io/">Website</a>
-
 - name: Krithi Koodli
   type: undergrad
   photo: people/kkoodli.png
@@ -127,13 +96,6 @@
   info: |
     BS Student, ECE
     <a href="mailto:gracekwak@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/grace-j-kwak/">Website</a>
-
-# - name: Benjamin Cruz
-#   type: undergrad
-#   photo: people/bcruz.jpg
-#   info: |
-#     BS Student, ECE
-#     <a href="mailto:benjicruz@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/benjamin-cruz-7690911b1">Website</a>
 
 - name: Samuel Chua
   type: undergrad
@@ -176,6 +138,38 @@
     MS, UCLA 2023
     <a href="mailto:alex87@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/jiaping-zhen">Website</a>
 
+- name: Aaron John Sabu
+  type: alumni
+  photo: people/ajohnsabu.jpg
+  info: |
+    MS, UCLA 2023
+    BTech, IIT Bombay 2021
+    <a href="mailto:aaronjs@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://sites.google.com/view/aaronjs/">Website</a>
+
+- name: Sarah Enayati
+  type: alumni
+  photo: people/senayati.jpg
+  info: |
+    MS, UCLA 2023
+    BS, UCLA 2022
+    <a href="mailto:sarahena@g.ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="">Website</a>
+
+- name: Matthew Guemmer
+  type: alumni
+  photo: people/mguemmer.jpg
+  info: |
+    SpaceX
+    BS, UCLA 2023
+    <a href="mailto:matthewguemmer@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/matthewguemmer/">Website</a>
+
+- name: Jacob Sayono
+  type: alumni
+  photo: people/jsayono.jpg
+  info: |
+    Retiina
+    BS, UCLA 2023
+    <a href="mailto:jacobsayono@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/jacobsayono/">Website</a>
+
 - name: Aleksandra Dudek
   type: alumni
   photo: people/adudek.jpg
@@ -183,6 +177,10 @@
     University of Michigan (PhD) 
     BS, UCLA 2023
     <a href="mailto:adudek@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/aleksandraannadudek">Website</a>
+
+
+
+
 
 
 
