--- a/_data/members.yml
+++ b/_data/members.yml
@@ -16,7 +16,7 @@
     PhD Student, MAE
     MS, UCLA 2022
     BS, UC Santa Barbara 2020
-    <b>Research</b>: Trajecotry Planning
+    <b>Research</b>: Trajectory Planning
     <a href="mailto:hjlevy@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://helenelevy.wixsite.com/portfolio">Website</a>
 
 - name: Samuel Gessow
